--- a/index.html
+++ b/index.html
@@ -11,23 +11,82 @@
 
         function getComputerChoice() {
             let roll = Math.random()
-            console.log(roll)
             let choice;
 
             if (roll <= 0.33) {
-                choice = "Rock"
+                choice = "rock"
             }
             if (roll > 0.33 && roll <= 0.66) {
-                choice = "Paper"
+                choice = "paper"
             }
             if (roll > 0.66) {
-                choice = "Scissors"
+                choice = "scissors"
             }
             return choice;
 
         }
 
-        console.log(getComputerChoice())
+        function getHumanChoice() {
+            choice = prompt("Enter your choice");
+            formattedChoice = choice.toLowerCase();
+            return formattedChoice;
+        }
+
+        let humanScore = 0;
+        let computerScore = 0;
+        function playRound (human, computer) {
+            console.log(human);
+            console.log(computer)
+            humanChoice = human
+            computerChoice = computer
+
+            if (humanChoice == "rock") {
+                if (computerChoice == "rock") {
+                    console.log("It's a tie!");
+                }
+                if (computerChoice == "paper") {
+                    computerScore++;
+                    console.log("You lose!");
+                }
+                if (computerChoice == "scissors") {
+                    humanScore++;
+                    console.log("You win!");
+                }
+            }
+            if (humanChoice == "paper") {
+                if (computerChoice == "rock") {
+                    humanScore++;
+                    console.log("You win!");
+                }
+                if (computerChoice == "paper") {
+                    console.log("It's a tie!");
+                }
+                if (computerChoice == "scissors") {
+                    computerScore++;
+                    console.log("You lose!");
+                }
+            }
+            if (humanChoice == "scissors") {
+                if (computerChoice == "rock") {
+                    computerScore++;
+                    console.log("You lose!");
+                }
+                if (computerChoice == "paper") {
+                    humanScore++;
+                    console.log("You win!");
+                }
+                if (computerChoice == "scissors") {
+                    console.log("It's a tie!");
+                }
+            }
+            console.log ("Human: " + humanScore + " Computer: " + computerScore);
+        }
+        function playGame() {
+            for (let i = 0; i <5; i++) {
+                playRound(getHumanChoice(), getComputerChoice());
+            }
+        }
+        playGame();
     </script>
 </body>
 </html>
