--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
             humanChoice = human
             computerChoice = computer
 
+            if(humanChoice == computerChoice) {
+                console.log("It's a tie!")
+            }
+
             if (humanChoice == "rock") {
-                if (computerChoice == "rock") {
-                    console.log("It's a tie!");
-                }
                 if (computerChoice == "paper") {
                     computerScore++;
                     console.log("You lose!");
@@ -57,9 +58,6 @@
                 if (computerChoice == "rock") {
                     humanScore++;
                     console.log("You win!");
-                }
-                if (computerChoice == "paper") {
-                    console.log("It's a tie!");
                 }
                 if (computerChoice == "scissors") {
                     computerScore++;
@@ -75,14 +73,11 @@
                     humanScore++;
                     console.log("You win!");
                 }
-                if (computerChoice == "scissors") {
-                    console.log("It's a tie!");
-                }
             }
             console.log ("Human: " + humanScore + " Computer: " + computerScore);
         }
         function playGame() {
-            for (let i = 0; i <5; i++) {
+            while (humanScore < 2 && computerScore < 2) {
                 playRound(getHumanChoice(), getComputerChoice());
             }
         }
