--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
+            <button id="reset">Play Again</button>
         </div>
     </div>
 </body>
